dotnet-hello-world/exercises/Exercise 3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-core-hello-world-deployment
spec:
  selector:
    matchLabels:
      app: dotnet-core-hello-world
  replicas: 1
  template:
    metadata:
      labels:
        app: dotnet-core-hello-world
    spec:
      containers:
      - name: dotnet-core-hello-world
        image: quay.io/appvia/dotnet-hello-world
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
