dotnet-hello-world/exercises/Exercise 3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-core-hello-world
  labels:
    run: dotnet-core-hello-world
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: dotnet-core-hello-world
